tests/conformance/invalid/bridge_position_fuera_de_rango.svp
-- bridge_position_fuera_de_rango.svp — posición puente fuera de rango para b=3

codomain K3 = { APTO, NO_APTO, INDETERMINADO };
output_semantics Klin {
  APTO -> "ok";
  NO_APTO -> "no";
  INDETERMINADO -> "u";
}

cellspec C1 {
  b: 3;
  codomain: K3;
  semantics: Klin;
  role: Base;
}

coupledspec CC_bad {
  cell: C1;
  bridges: [10];
}
